--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "license": "MIT",
   "repository": "https://github.com/garyyeap/easy-fullscreen",
   "main": "fullscreen.min.js",
+  "module": "./Fullscreen.js",
+  "jsnext:main": "./Fullscreen.js",
   "scripts": {
     "build": "babel Fullscreen.js --out-file fullscreen.min.js"
   },
