--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "author": "Gary Yeap <contact@garyyeap.com>",
   "license": "MIT",
   "repository": "https://github.com/garyyeap/easy-fullscreen",
-  "main": "fullscreen.min.js",
+  "main": "./fullscreen.umd.min.js",
   "module": "./Fullscreen.js",
   "jsnext:main": "./Fullscreen.js",
   "scripts": {
-    "build": "babel Fullscreen.js --out-file fullscreen.min.js"
+    "build": "babel Fullscreen.js --out-file fullscreen.umd.min.js"
   },
   "typings": "./Fullscreen.d.ts",
   "devDependencies": {
